--- a/app/src/main/res/layout/activity_school_admin.xml
+++ b/app/src/main/res/layout/activity_school_admin.xml
@@ -70,6 +70,11 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <Spinner
+                    android:id="@+id/id_Spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="30sp"/>
+
                 <EditText
                     android:id="@+id/id_EditText"
                     android:layout_width="match_parent"
@@ -114,7 +119,6 @@
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="#F9ED69"
                         android:layout_margin="20px">
 
                         <Spinner
@@ -153,19 +157,6 @@
             </LinearLayout>
 
         </ScrollView>
-
-        <!--Daily Log-->
-        <!--
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
-        </LinearLayout>
-        -->
-
     </LinearLayout>
 
     <!--Footer-->
@@ -184,7 +175,7 @@
             android:layout_weight="1"
             android:backgroundTint="#F9ED69"
             android:textColor="#6A2C70"
-            android:text="Submit Employee"
+            android:text="Submit"
             android:textSize="30sp" />
 
     </LinearLayout>
