--- a/app/src/main/res/menu/hamburger_systemadmin_menu.xml
+++ b/app/src/main/res/menu/hamburger_systemadmin_menu.xml
@@ -18,4 +18,7 @@
     <item
         android:id="@+id/delete_employee"
         android:title="Delete Employee"/>
+    <item
+        android:id="@+id/trasnfer_employee"
+        android:title="Transfer Employee"/>
 </menu>
