--- a/app/src/main/res/layout/activity_generate.xml
+++ b/app/src/main/res/layout/activity_generate.xml
@@ -61,6 +61,7 @@
             android:textSize="20sp"/>
 
         <LinearLayout
+            android:id="@+id/id_LinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -79,12 +80,18 @@
                 android:textAlignment="center"
                 android:background="@drawable/round_edittext_bg"
                 android:padding="16dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/scanQR_ImageButton"
                 android:layout_width="10dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.20"
+                android:layout_weight="1"
                 android:layout_marginRight="30px"
                 android:layout_marginTop="30px"
                 android:layout_marginBottom="30px"
@@ -92,6 +99,32 @@
                 android:background="@color/zxing_transparent"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/scanqrbutton" />
+
+            <ImageButton
+                android:id="@+id/scanFingerPrint_ImageButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="30px"
+                android:layout_marginTop="30px"
+                android:layout_marginBottom="30px"
+                android:adjustViewBounds="true"
+                android:background="@color/zxing_transparent"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/scanfingerprintbutton" />
+
+            <ImageButton
+                android:id="@+id/scanFacial_ImageButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="30px"
+                android:layout_marginTop="30px"
+                android:layout_marginBottom="30px"
+                android:adjustViewBounds="true"
+                android:background="@color/zxing_transparent"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/scanfacialbutton" />
 
         </LinearLayout>
 
