--- a/app/src/main/res/layout/activity_school_admin.xml
+++ b/app/src/main/res/layout/activity_school_admin.xml
@@ -61,20 +61,18 @@
             android:textColor="#6A2C70"
             android:textSize="20sp"/>
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="20dp">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="20dp">
 
                 <Spinner
                     android:id="@+id/id_Spinner"
                     android:layout_width="match_parent"
-                    android:layout_height="30sp"/>
+                    android:layout_height="30sp" />
 
                 <EditText
                     android:id="@+id/id_EditText"
@@ -157,7 +155,7 @@
 
             </LinearLayout>
 
-        </ScrollView>
+
     </LinearLayout>
 
     <!--Footer-->
