GPS Feature Toggle Switch XML Added

--- a/app/src/main/res/layout/activity_generate_dtr.xml
+++ b/app/src/main/res/layout/activity_generate_dtr.xml
@@ -586,7 +586,8 @@
             android:id="@+id/generateDTR_Button"
             android:layout_margin="10px"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:backgroundTint="#F9ED69"
             android:textColor="#6A2C70"
             android:text="Generate"
@@ -595,7 +596,8 @@
             android:id="@+id/downloadDTR_Button"
             android:layout_margin="10px"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:backgroundTint="#F9ED69"
             android:text="Download"
             android:textColor="#6A2C70"
