--- a/app/src/main/res/layout/activity_system_admin.xml
+++ b/app/src/main/res/layout/activity_system_admin.xml
@@ -215,6 +215,7 @@
                     android:textAlignment="center"
                     android:background="@drawable/round_edittext_bg"
                     android:padding="16dp"/>
+                -->
 
                 <TableLayout
                     android:id="@+id/birthday_TableLayout"
@@ -256,6 +257,30 @@
                             android:layout_width="0dp"
                             android:layout_weight="0.25"
                             android:layout_height="30sp" />
+                    </TableRow>
+                </TableLayout>
+
+                <TableLayout
+                    android:id="@+id/gpsFeature_TableLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.75"
+                            android:text="GPS Feature"
+                            android:textSize="20sp"/>
+
+                        <Switch
+                            android:id="@+id/gpsFeature_Switch"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.25"/>
+
                     </TableRow>
                 </TableLayout>
 
