added setting in the hamburger_sysadmin_menu.xml

--- a/app/src/main/res/menu/hamburger_systemadmin_menu.xml
+++ b/app/src/main/res/menu/hamburger_systemadmin_menu.xml
@@ -19,6 +19,9 @@
         android:id="@+id/delete_employee"
         android:title="Delete Employee"/>
     <item
-        android:id="@+id/trasnfer_employee"
+        android:id="@+id/transfer_employee"
         android:title="Transfer Employee"/>
+    <item
+        android:id="@+id/settings"
+        android:title="Settings"/>
 </menu>
