--- a/app/src/main/res/menu/hamburger_schooladmin_menu.xml
+++ b/app/src/main/res/menu/hamburger_schooladmin_menu.xml
@@ -13,6 +13,6 @@
         android:id="@+id/transfer_employee"
         android:title="Transfer Employee"/>
     <item
-        android:id="@+id/setting"
+        android:id="@+id/settings"
         android:title="Settings"/>
 </menu>
