--- a/app/src/main/res/menu/hamburger_schooladmin_menu.xml
+++ b/app/src/main/res/menu/hamburger_schooladmin_menu.xml
@@ -12,4 +12,7 @@
     <item
         android:id="@+id/transfer_employee"
         android:title="Transfer Employee"/>
+    <item
+        android:id="@+id/settings"
+        android:title="Settings"/>
 </menu>
