Added a Toggle Switch feature so that the school admin can control what features to use

--- a/app/src/main/res/layout/activity_log_in_attendance.xml
+++ b/app/src/main/res/layout/activity_log_in_attendance.xml
@@ -70,8 +70,7 @@
                 android:textSize="30sp"
                 android:textAlignment="center"
                 android:background="@drawable/round_edittext_bg"
-                android:padding="16dp"
-                android:visibility="gone"/>
+                android:padding="16dp"/>
         </LinearLayout>
 
         <LinearLayout
