Added a Toggle Switch feature so that the school admin can control what features to use

--- a/app/src/main/res/layout/activity_log_in_attendance.xml
+++ b/app/src/main/res/layout/activity_log_in_attendance.xml
@@ -138,7 +138,6 @@
             android:backgroundTint="#F9ED69"
             android:text="Submit"
             android:textColor="#6A2C70"
-            android:textSize="30sp"
-            android:visibility="gone"/>
+            android:textSize="30sp" />
     </LinearLayout>
 </LinearLayout>
