--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
             android:layout_height="match_parent"
             android:layout_weight="0.25"
             android:background="#B83B5E"
-            app:srcCompat="?attr/actionModeCloseDrawable" />
+            android:scaleType="fitCenter"
+            app:srcCompat="@android:drawable/ic_menu_revert" />
 
         <include layout="@layout/header_layout"/>
 
