--- a/app/src/main/res/layout/activity_generate_dtr.xml
+++ b/app/src/main/res/layout/activity_generate_dtr.xml
@@ -566,7 +566,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:text="SCHOOL HEAD"
+                    android:text="HEAD"
                     android:textSize="7.5sp"
                     android:gravity="center"
                     android:textStyle="italic"/>
