--- a/app/src/main/res/layout/activity_school_admin.xml
+++ b/app/src/main/res/layout/activity_school_admin.xml
@@ -274,6 +274,25 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.75"
+                            android:text="Time-Based Button"
+                            android:textSize="20sp"/>
+
+                        <Switch
+                            android:id="@+id/timeBased_Switch"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.25"/>
+
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.75"
                             android:text="QR Scanner Feature"
                             android:textSize="20sp"/>
 
