--- a/app/src/main/res/layout/activity_school_admin.xml
+++ b/app/src/main/res/layout/activity_school_admin.xml
@@ -72,7 +72,7 @@
                     android:id="@+id/sourceAndDestination_TableLayout"
                     android:layout_width = "match_parent"
                     android:layout_height = "wrap_content"
-                    android:visibility = "gone">
+                    android:visibility="gone">
 
                     <TableRow
                         android:layout_width="match_parent"
@@ -83,18 +83,16 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="Source"
+                            android:text="Source : "
                             android:textColor="#6A2C70"
                             android:textSize="20sp"
-                            android:textAlignment="center"/>
+                            android:textAlignment="viewEnd"/>
                         <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Destination"
-                            android:textColor="#6A2C70"
-                            android:textSize="20sp"
-                            android:textAlignment="center"/>
+                            android:id="@+id/source_TextView"
+                            android:layout_width="0.25dp"
+                            android:layout_height="30sp"
+                            android:layout_weight="1"/>
+
                     </TableRow>
                     <TableRow
                         android:layout_width="match_parent"
@@ -102,10 +100,14 @@
                         android:layout_margin="20px">
 
                         <TextView
-                            android:id="@+id/source_TextView"
-                            android:layout_width="0.25dp"
-                            android:layout_height="30sp"
-                            android:layout_weight="1"/>
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Destination : "
+                            android:textColor="#6A2C70"
+                            android:textSize="20sp"
+                            android:textAlignment="viewEnd"/>
+
 
                         <!--<Spinner
                             android:id="@+id/source_Spinner"
