--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -41,6 +41,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:id="@+id/schoolName_TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-smallcaps"
+            android:text="Version : 9"
+            android:textAlignment="center"
+            android:textColor="#6A2C70"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
     </LinearLayout>
 
     <!--Footer-->
