--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -69,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:text="Product of the talented minds of TVL-CSS/CPJ 12 Batch 2021-2022"
+            android:text="Product of the talented\nminds of TVL-CSS/CPJ 12 Batch 2021-2022.\nMade in Flora National High School"
             android:textAlignment="center"
             android:textColor="#F9ED69"
             android:textSize="20sp"
