--- a/app/src/main/res/layout/activity_attendance.xml
+++ b/app/src/main/res/layout/activity_attendance.xml
@@ -50,12 +50,13 @@
         android:layout_margin="35px"
         android:padding="50px">
         <!--android:background="#F08A5D"-->
+
         <TextView
             android:id="@+id/dateAndTime_TextView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-smallcaps"
-            android:text="MM/dd/yyyy hh:mm:ss a"
+            android:text="Loading..."
             android:textColor="#FFF000"
             android:textAlignment="center"
             android:layout_gravity="left"
@@ -68,7 +69,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#F9ED69"
             android:textColor="#6A2C70"
-            android:text=""
+            android:text="Name will appear here when punched in."
             android:textSize="20sp"
             android:textAlignment="center"/>
 
