--- a/app/src/main/res/layout/activity_school_admin.xml
+++ b/app/src/main/res/layout/activity_school_admin.xml
@@ -33,8 +33,8 @@
             android:layout_height="match_parent"
             android:layout_weight="0.25"
             android:background="#00000000"
-            android:src="@drawable/hamburger"/>
-            <!--android:scaleType="fitCenter"-->
+            android:src="@drawable/kebab"
+            android:scaleType="fitCenter"/>
 
 
     </LinearLayout>
