--- a/app/src/main/res/layout/activity_system_admin.xml
+++ b/app/src/main/res/layout/activity_system_admin.xml
@@ -29,11 +29,12 @@
 
         <ImageButton
             android:id="@+id/hamburger_ImageButton"
-            android:layout_width="69dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.25"
             android:background="#00000000"
-            android:src="@drawable/hamburger" />
+            android:src="@drawable/kebab"
+            android:scaleType="fitCenter"/>
 
     </LinearLayout>
 
