--- a/app/src/main/res/layout/activity_attendance.xml
+++ b/app/src/main/res/layout/activity_attendance.xml
@@ -56,6 +56,8 @@
             android:id="@+id/dateAndTime_TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="100px"
+            android:paddingLeft="100px"
             android:fontFamily="sans-serif-smallcaps"
             android:text="Loading..."
             android:textColor="#FFF000"
