--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,8 @@
             android:id="@+id/dateAndTime_TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="100px"
+            android:paddingLeft="100px"
             android:layout_gravity="left"
             android:background="#6A2C70"
             android:fontFamily="sans-serif-smallcaps"
