Added a Menu to download all qr codes of employees

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -196,12 +196,12 @@
                 app:srcCompat="@drawable/campus_connect_logo"/>
 
             <ImageButton
-                android:id="@+id/register_Button"
+                android:id="@+id/admin_Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/MyImageButtonStyle"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/registerbutton" />
+                app:srcCompat="@drawable/adminbutton" />
 
             <ImageButton
                 android:id="@+id/generate_Button"
