--- a/app/src/main/res/layout/activity_school_admin.xml
+++ b/app/src/main/res/layout/activity_school_admin.xml
@@ -225,6 +225,17 @@
 
                 </ScrollView>
 
+                <ImageView
+                    android:id="@+id/qrCode_ImageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="50dp"
+                    android:adjustViewBounds="true"
+                    android:clickable="true"
+                    android:layout_gravity="center"
+                    android:background="@drawable/table_border"
+                    android:visibility="gone"/>
+
                 <TableLayout
                     android:id="@+id/features_TableLayout"
                     android:layout_width="match_parent"
