--- a/app/src/main/res/layout/activity_school_admin.xml
+++ b/app/src/main/res/layout/activity_school_admin.xml
@@ -71,8 +71,7 @@
                 <TableLayout
                     android:id="@+id/sourceAndDestination_TableLayout"
                     android:layout_width = "match_parent"
-                    android:layout_height = "wrap_content"
-                    android:visibility="gone">
+                    android:layout_height = "wrap_content">
 
                     <TableRow
                         android:layout_width="match_parent"
@@ -97,6 +96,7 @@
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="#F9ED69"
                         android:layout_margin="20px">
 
                         <TextView
@@ -128,8 +128,7 @@
                 <Spinner
                     android:id="@+id/id_Spinner"
                     android:layout_width="match_parent"
-                    android:layout_height="30sp"
-                    android:visibility="gone"/>
+                    android:layout_height="30sp"/>
 
                 <ScrollView
                     android:layout_width="match_parent"
@@ -150,8 +149,7 @@
                             android:textSize="20sp"
                             android:textAlignment="center"
                             android:background="@drawable/round_edittext_bg"
-                            android:padding="16dp"
-                            android:visibility="gone"/>
+                            android:padding="16dp"/>
 
                         <EditText
                             android:id="@+id/firstName_EditText"
@@ -163,8 +161,7 @@
                             android:textSize="20sp"
                             android:textAlignment="center"
                             android:background="@drawable/round_edittext_bg"
-                            android:padding="16dp"
-                            android:visibility="gone"/>
+                            android:padding="16dp"/>
 
                         <EditText
                             android:id="@+id/lastName_EditText"
@@ -176,14 +173,12 @@
                             android:textSize="20sp"
                             android:textAlignment="center"
                             android:background="@drawable/round_edittext_bg"
-                            android:padding="16dp"
-                            android:visibility="gone"/>
+                            android:padding="16dp"/>
 
                         <TableLayout
                             android:id="@+id/birthday_TableLayout"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:visibility="gone">
+                            android:layout_height="wrap_content">
                             <TableRow
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -193,7 +188,7 @@
                                 <Spinner
                                     android:id="@+id/month_Spinner"
                                     android:layout_width="0dp"
-                                    android:layout_weight="0.5"
+                                    android:layout_weight="1"
                                     android:layout_height="30sp"/>
 
                                 <View
@@ -205,7 +200,7 @@
                                 <Spinner
                                     android:id="@+id/day_Spinner"
                                     android:layout_width="0dp"
-                                    android:layout_weight="0.25"
+                                    android:layout_weight="1"
                                     android:layout_height="30sp" />
 
                                 <View
@@ -217,7 +212,7 @@
                                 <Spinner
                                     android:id="@+id/year_Spinner"
                                     android:layout_width="0dp"
-                                    android:layout_weight="0.25"
+                                    android:layout_weight="1"
                                     android:layout_height="30sp" />
                             </TableRow>
 
@@ -234,47 +229,14 @@
                     android:adjustViewBounds="true"
                     android:clickable="true"
                     android:layout_gravity="center"
-                    android:background="@drawable/table_border"
-                    android:visibility="gone"/>
-
-                <TableLayout
-                    android:id="@+id/dateDTR_TableLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone">
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#F9ED69"
-                        android:layout_margin="20px">
-
-                        <Spinner
-                            android:id="@+id/monthDTR_Spinner"
-                            android:layout_width="0dp"
-                            android:layout_weight="0.5"
-                            android:layout_height="30sp"/>
-
-                        <View
-                            android:id="@+id/divider3"
-                            android:layout_width="2dp"
-                            android:layout_height="match_parent"
-                            android:background="?android:attr/listDivider" />
-
-                        <Spinner
-                            android:id="@+id/yearDTR_Spinner"
-                            android:layout_width="0dp"
-                            android:layout_weight="0.5"
-                            android:layout_height="30sp" />
-                    </TableRow>
-                </TableLayout>
+                    android:background="@drawable/table_border" />
 
                 <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10px"
                     android:background="@color/white"
-                    android:layout_gravity="center"
-                    android:visibility="gone">
+                    android:layout_gravity="center">
 
                     <LinearLayout
                         android:id="@+id/dtr_LinearLayout"
@@ -765,8 +727,7 @@
                 <TableLayout
                     android:id="@+id/features_TableLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone">
+                    android:layout_height="wrap_content">
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -902,8 +863,7 @@
             android:backgroundTint="#F9ED69"
             android:textColor="#6A2C70"
             android:text="Submit"
-            android:textSize="30sp"
-            android:visibility="gone"/>
+            android:textSize="30sp"/>
 
     </LinearLayout>
 </LinearLayout>
