Change Background Color of Announcement TextView in Splash

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -56,7 +56,7 @@
             android:id="@+id/announcement_TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
+            android:background="#F08A5D"
             android:fontFamily="sans-serif-smallcaps"
             android:text="Announcement!"
             android:textAlignment="center"
